# kovrin

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  publish.yml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: ApprovalQueue.tsx  AutonomyControls.tsx  GraphView.tsx  IntentPanel.tsx  PrmScoreView.tsx  ReplayViewer.tsx  ResultPanel.tsx  TokensView.tsx  TopologyView.tsx  TraceViewer.tsx  ViewModeSelector.tsx  WatchdogStatus.tsx
dashboard/src/types/: kovrin.ts  kovrin.ts.bak
docs/: ARCHITECTURE.md  CLAUDE_OPENSOURCE.md  KOVRIN_Phase1_Plan.docx  Kovrin_Whitepaper_v2.docx  README_OPENSOURCE.md  SUPERWORK.md  kovrin-design-spec.jsx
docs/prototypes/: graph_engine.py  intent_v2.py  trace_logger.py
examples/: quickstart.py
scripts/: start-web.sh
specs/: AxiomValidation.tla  GraphExecution.tla  HashChain.tla  KovrinSafety.tla  README.md  RoutingMatrix.tla  SpeculationModel.tla  TaskStateMachine.tla  WatchdogMonitor.tla
src/kovrin/: __init__.py  cli.py  exceptions.py  logging.py
src/kovrin/agents/: base.py  coordinator.py  registry.py  team.py  tools.py
src/kovrin/api/: server.py  superwork_router.py
src/kovrin/audit/: persistent_trace_log.py  trace_logger.py
src/kovrin/core/: constitutional.py  models.py
tests/: conftest.py  test_adversarial.py  test_adversarial_tokens.py  test_adversarial_tools.py  test_agent_drift.py  test_agents.py  test_api.py  test_api_e2e.py  test_approval.py  test_audit_e2e.py  test_autonomy.py  test_beam_search.py  test_chain.py  test_chain_e2e.py  test_cli.py  test_confidence.py  test_constitutional.py  test_context_injector.py  test_critics.py  test_drift.py  test_eventstore.py  test_exceptions.py  test_exploration_integration.py  test_graph_engine.py  test_hash_persistence.py  test_intent_parser.py  test_logging.py  test_mcts.py  test_models.py  test_observability.py  test_orchestrator.py  test_orchestrator_agent.py  test_persistence.py  test_persistent_trace_log.py  test_pipeline_e2e.py  test_pricing.py  test_prm.py  test_providers.py  test_replay.py  test_risk_router.py  (+26 more)
(+64 files in other folders)
